Added Damage Counter

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h2>Select Difficulty</h2>
       <div class="difficultyButtons">
         <button id="difficulty1">I can't handle limits!</button>
-        <button id="difficulty2">Derivatives are doable</button>
+        <button id="difficulty2">Derivatives are doable...</button>
         <button id="difficulty3">Who needs a calculator!?</button>
-        <button id="difficulty4">I AM A CALC GOD</button>
+        <button id="difficulty4">I AM A CALC GOD!</button>
       </div>
       <button id="backToMain">Back</button>
     </div>
