Added map selection

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
       <button id="backToMain">Back</button>
     </div>
   </div>
+  <div id="mapMenu" style="display:none;">
+    <div id="mapDesc"></div>
+    <div class="menuContent">
+      <h2>Select Map</h2>
+      <div class="difficultyButtons">
+        <button id="map1">Calculus Classroom</button>
+        <button id="map2">Robotics Room</button>
+
+      </div>
+      <button id="backToMain2">Back</button>
+    </div>
+  </div>
   <div id="gameArea" style="display:none;">
     <img src="Player.png" id="player">
     <div id="screenFlash" style="display:none;"></div>
