--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div class="menuContent">
       <h2>Select Map</h2>
       <div class="difficultyButtons">
+        <button id="map0">Campaign</button>
         <button id="map1">Calculus Classroom</button>
         <button id="map2">Robotics Room</button>
 
@@ -56,7 +57,7 @@
         <p id="weapon" class = "HudVar">Shauntgun</p>
     </div>
     <div class = "Score">
-        <p class = "HudTitle">Score:</p>
+        <p class = "HudTitle" id = "ScoreTitle">Score:</p>
         <p id="Score" class = "HudVar">0</p>
     </div>
     <div class = "Score">
@@ -67,7 +68,7 @@
         <p id="sanity" class = "HudVar">0%</p>
     </div>
     <div class = "Wave">
-        <p class = "HudTitle">Wave:</p>
+        <p class = "HudTitle" id = "WaveTitle">Wave:</p>
         <p id="wave" class = "HudVar">0</p>
     </div>
     <div class = "Dash">
