FPS Counter and stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <p id = "FPSCounter">FPS: 0</p>
   <div id="mainMenu">
     <div class="menuContent">
       <h1>Shanvanth's Last Stand</h1>
