Added ammo counter

--- a/index.html
+++ b/index.html
@@ -57,26 +57,27 @@
         <p class = "HudTitle">Weapon:</p>
         <p id="weapon" class = "HudVar">Shauntgun</p>
     </div>
-    <div class = "Score">
-        <p class = "HudTitle" id = "ScoreTitle">Score:</p>
-        <p id="Score" class = "HudVar">0</p>
+    <div class = "Dash">
+      <p class = "HudTitle">Ammo:</p>
+      <p id="shots" class = "HudVar">25/50</p>
     </div>
     <div class = "Score">
-        <img src="NormalShan.webp" id="ShanImage" style = "width:100px; height:100px;">
+      <img src="NormalShan.webp" id="ShanImage" style = "width:100px; height:100px;">
     </div>
     <div class = "Sanity">
-        <p class = "HudTitle">Sanity:</p>
-        <p id="sanity" class = "HudVar">0%</p>
+      <p class = "HudTitle">Sanity:</p>
+      <p id="sanity" class = "HudVar">0%</p>
+        
     </div>
     <div class = "Wave">
         <p class = "HudTitle" id = "WaveTitle">Wave:</p>
         <p id="wave" class = "HudVar">0</p>
+      </div>
+      <div class = "Score">
+          <p class = "HudTitle" id = "ScoreTitle">Score:</p>
+          <p id="Score" class = "HudVar">0</p>
+      </div>
     </div>
-    <div class = "Dash">
-        <p class = "HudTitle">Dash:</p>
-        <p id="dash" class = "HudVar">0%</p>
-    </div>
-  </div>
 
     </audio>
   <script src="script.js"></script>
