Added some spread, fixed lots of stuff, sound!

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class = "Weapon">
         <p class = "HudTitle">Weapon:</p>
-        <p id="weapon" class = "HudVar">Shauntgun</p>
+        <p id="weapon" class = "HudVarLong">Shauntgun</p>
     </div>
     <div class = "Dash">
       <p class = "HudTitle">Ammo:</p>
@@ -73,7 +73,7 @@
         <p class = "HudTitle" id = "WaveTitle">Wave:</p>
         <p id="wave" class = "HudVar">0</p>
       </div>
-      <div class = "Score">
+      <div class = "Score" style="border-right: 4px solid black;">
           <p class = "HudTitle" id = "ScoreTitle">Score:</p>
           <p id="Score" class = "HudVar">0</p>
       </div>
