--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button id="map0">Campaign</button>
         <button id="map1">Calculus Classroom</button>
         <button id="map2">Robotics Room</button>
-
+        <button id="map3">English Classroom</button>
       </div>
       <button id="backToMain2">Back</button>
     </div>
