Added new map, window scaling

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <button id="map1">Calculus Classroom</button>
         <button id="map2">Robotics Room</button>
         <button id="map3">English Classroom</button>
+        <button id="map4">Physics Classroom</button>
       </div>
       <button id="backToMain2">Back</button>
     </div>
