--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id="playButton">Play</button>
       <button id="helpButton">How to Play</button>
       <button id="highScoresButton">High Scores</button>
+      <button id="optionsButton">Options</button>
     </div>
   </div>
   <div id="difficultyMenu" style="display:none;">
@@ -28,6 +29,18 @@
         <button id="difficulty4">I AM A CALC GOD!</button>
       </div>
       <button id="backToMain">Back</button>
+    </div>
+  </div>
+  <div id="optionsMenu" style="display:none;">
+    <div id="optionsDesc"></div>
+    <div class="menuContent">
+      <h2>Options</h2>
+      <div class="optionsButtons">
+        <button id="options1">Music: ON</button>
+        <button id="options2">SFX: ON</button>
+        <button id="options3">Show High Score: ON</button>
+      </div>
+      <button id="backToMain3">Back</button>
     </div>
   </div>
   <div id="mapMenu" style="display:none;">
