Updated the manuals

--- a/help.html
+++ b/help.html
@@ -126,7 +126,9 @@
     </ol>
 
     <h3>Gameplay</h3>
-    <p>Use <strong>WASD</strong> or <strong>Arrow Keys</strong> to move, <strong>Shift</strong> to dash, and your <strong>mouse</strong> to aim. Press <strong>Space</strong> or <strong>Click</strong> to attack.</p>
+    <p>On <strong>Desktop</strong>, use <strong>WASD</strong> or <strong>Arrow Keys</strong> to move, <strong>Shift</strong> to dash, and your <strong>mouse</strong> to aim. Press <strong>Space</strong> or <strong>Click</strong> to attack.</p>
+    <img src="MobileGameplay.jpg" alt="Mobile Gameplay">
+    <p>On <strong>Mobile</strong>, use the <strong>Left Joystick</strong> to move, the <strong>Right Joystick</strong> to aim, <strong>Dash Button (Electric Sign)</strong> to dash, Press <strong>Attack Button (Explosion Sign)</strong> to attack, <strong>Pencil Button</strong> to switch to the M. Pencil, and <strong>Switch Button</strong> to cycle weapons.</p>
     <img src="AttackingRead.png" alt="Attacking">
 
     <p>Different weapons have unique damage values. Switch weapons using <strong>number keys</strong> or <strong>C</strong> for the Mechanical Pencil. Avoid enemy hits and projectiles—once HP hits 0, it’s over.</p>
@@ -306,13 +308,20 @@
   <li>Enabled mouse movement aiming (instead of just movement). Big change!</li>
 </ul>
 
-<h3>1.1.3 (Current)</h3>
+<h3>1.1.3</h3>
 <ul>
   <li>Added 2 new maps and new music.</li>
   <li>Added window scaling support.</li>
   <li>Redesigned HUD for better visibility.</li>
   <li>Added options menu to change settings.</li>
   <li>Made this manual accessible directly from the game.</li>
+</ul>
+
+<h3>1.2 (Mobile) [Current]</h3>
+<ul>
+  <li>Added mobile support!</li>
+  <li>Removed startup Alert</li>
+  <li>Fixed viewport issues so it doesn't hide UI anymore when not in fullscreen.</li>
 </ul>
   </section>
 
