--- a/help.html
+++ b/help.html
@@ -317,11 +317,18 @@
   <li>Made this manual accessible directly from the game.</li>
 </ul>
 
-<h3>1.2 (Mobile) [Current]</h3>
+<h3>1.2 (Mobile)</h3>
 <ul>
   <li>Added mobile support!</li>
   <li>Removed startup Alert</li>
   <li>Fixed viewport issues so it doesn't hide UI anymore when not in fullscreen.</li>
+</ul>
+
+
+<h3>1.2.1 [Current]</h3>
+<ul>
+  <li>Patched mobile port on Safari so that controls will work.</li>
+  <li>Added Average FPS Counter.</li>
 </ul>
   </section>
 
