Safari font fix (maybe?)

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
   <div id="playerHUD" style="display:none;">
     
     <div class = "HealthBar">
-        <p class = "HudTitle">HP:</p>
+        <p class = "HudTitle" id = "HealthTitle">HP:</p>
         <p id="HP" class = "HudVar">100%</p>
     </div>
     <div class = "Weapon">
-        <p class = "HudTitle">Weapon:</p>
+        <p class = "HudTitle" id = "WeaponTitle">Weapon:</p>
         <p id="weapon" class = "HudVarLong">Shauntgun</p>
     </div>
-    <div class = "Dash">
-      <p class = "HudTitle">Ammo:</p>
+    <div class = "Ammo">
+      <p class = "HudTitle" id = "AmmoTitle">Ammo:</p>
       <p id="shots" class = "HudVar">25/50</p>
     </div>
     <div class = "Score">
       <img src="NormalShan.webp" id="ShanImage" style = "width:100px; height:100px;">
     </div>
     <div class = "Sanity">
-      <p class = "HudTitle">Sanity:</p>
+      <p class = "HudTitle" id = "SanityTitle">Sanity:</p>
       <p id="sanity" class = "HudVar">0%</p>
         
     </div>
